gallery dashboard done

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -373,10 +373,13 @@
             </div>
         </div>
     </section>
+    <!-- bottom hero section end  -->
+    <!-- footer -->
     <footer class="main-footer-area">
-        <div class="container main-footer-border-bottom pb-5">
-            <div class="row">
-                <div class="col-6 main-footer-left">
+        <div class="container pb-5">
+            <div class="row gy-4">
+                <div class="col-sm-12 col-lg-6">
+                   <div class="main-footer-left">
                     <img src="../assets/images/footer-logo-icon.png" alt="footer logo icon" class="me-1">
                     <img src="../assets/images/cutepie-footer-logo.png" alt="footer logo">
                     <p class="f-14 color-white pt-4">
@@ -384,7 +387,7 @@
                         labore et dolore magna aliqua. Ut enim ad minim velit esse cillum dolore eu fugiat nulla
                         pariatur.
                     </p>
-                    <div class="social pt-5">
+                    <div class="social">
                         <ul>
                             <li>
                                 <a href="javascript:void(0)">
@@ -424,9 +427,10 @@
                             </li>
                         </ul>
                     </div>
+                   </div>
                 </div>
-                <div class="col-2">
-                    <h4 class="footer-category-title mb-4">Useful links</h4>
+                <div class="col-sm-4 col-lg-2">
+                    <h4 class="footer-category-title mb-lg-4">Useful links</h4>
                     <ul>
                         <li class="ptop-25">
                             <a href="#" class="footer-category-link">FAQs</a>
@@ -445,8 +449,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-2">
-                    <h4 class="footer-category-title mb-4">Explore</h4>
+                <div class="col-sm-4 col-lg-2">
+                    <h4 class="footer-category-title mb-lg-4">Explore</h4>
                     <ul>
                         <li class="ptop-25">
                             <a href="#" class="footer-category-link">About Us</a>
@@ -462,8 +466,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-2">
-                    <h4 class="footer-category-title mb-4">Contact Info</h4>
+                <div class="col-sm-4 col-lg-2">
+                    <h4 class="footer-category-title mb-lg-4">Contact Info</h4>
                     <ul>
                         <li class="ptop-25">
                             <a href="#" class="footer-category-link">361-777-5681
@@ -477,10 +481,13 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-12">
+                    <div class="main-footer-border-bottom">
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
-    <!-- bottom hero section end  -->
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/odometer.js"></script>
