--- a/main-footer.html
+++ b/main-footer.html
@@ -19,9 +19,10 @@
 <body>
 
     <footer class="main-footer-area">
-        <div class="container main-footer-border-bottom pb-5">
-            <div class="row">
-                <div class="col-6 main-footer-left">
+        <div class="container pb-5">
+            <div class="row gy-4">
+                <div class="col-sm-12 col-lg-6">
+                   <div class="main-footer-left">
                     <img src="./assets/images/footer-logo-icon.png" alt="footer logo icon" class="me-1">
                     <img src="./assets/images/cutepie-footer-logo.png" alt="footer logo">
                     <p class="f-14 color-white pt-4">
@@ -29,7 +30,7 @@
                         labore et dolore magna aliqua. Ut enim ad minim velit esse cillum dolore eu fugiat nulla
                         pariatur.
                     </p>
-                    <div class="social pt-5">
+                    <div class="social">
                         <ul>
                             <li>
                                 <a href="javascript:void(0)">
@@ -69,9 +70,10 @@
                             </li>
                         </ul>
                     </div>
+                   </div>
                 </div>
-                <div class="col-2">
-                    <h4 class="footer-category-title mb-4">Useful links</h4>
+                <div class="col-sm-4 col-lg-2">
+                    <h4 class="footer-category-title mb-lg-4">Useful links</h4>
                     <ul>
                         <li class="ptop-25">
                             <a href="#" class="footer-category-link">FAQs</a>
@@ -90,8 +92,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-2">
-                    <h4 class="footer-category-title mb-4">Explore</h4>
+                <div class="col-sm-4 col-lg-2">
+                    <h4 class="footer-category-title mb-lg-4">Explore</h4>
                     <ul>
                         <li class="ptop-25">
                             <a href="#" class="footer-category-link">About Us</a>
@@ -107,8 +109,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-2">
-                    <h4 class="footer-category-title mb-4">Contact Info</h4>
+                <div class="col-sm-4 col-lg-2">
+                    <h4 class="footer-category-title mb-lg-4">Contact Info</h4>
                     <ul>
                         <li class="ptop-25">
                             <a href="#" class="footer-category-link">361-777-5681
@@ -121,6 +123,10 @@
                             <a href="#" class="footer-category-link">Portland, TX 78374</a>
                         </li>
                     </ul>
+                </div>
+                <div class="col-12">
+                    <div class="main-footer-border-bottom">
+                    </div>
                 </div>
             </div>
         </div>
