--- a/gallery/dashboard-edit-profile.html
+++ b/gallery/dashboard-edit-profile.html
@@ -31,31 +31,37 @@
                 <a href="javascript:void(0)" class="dashborard-sidenav-closebtn" onclick="closeDashboardNav()">&times;</a>
                 <ul class="dashboard-sidenav-list">
                     <li>
-                        <a href="./dashboard-personal-profile.html">
+                        <a href="./gallery-dashboard.html" class="color-white">
+                            <i class="fa fa-id-card"></i>
+                            Dashboard
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./dashboard-personal-profile.html"class="color-white">
                             <i class="fa fa-user"></i>
                             Personal Profile Page
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./dashboard-edit-profile.html"  class="color-white dashboard-menu-active">
                             <i class="fa fa-pencil-square-o"></i>
                             Edit Profile Page
                         </a>
                     </li>
                     <li>
-                        <a href="#dashboard-all-photo">
+                        <a href="./dashboard-all-photo.html" class="color-white">
                             <i class="fa fa-picture-o"></i>
                             All Photos
                         </a>
                     </li>
                     <li>
-                        <a href="#dashboard-all-video">
+                        <a href="./dashboard-all-video.html" class="color-white">
                             <i class="fa fa-file-video-o"></i>
                             All Videos
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" class="color-white">
                             <i class="fa fa-key"></i>
                             Change Password
                         </a>
@@ -92,31 +98,37 @@
         <div class="dashboard-sidenav">
             <ul class="dashboard-sidenav-list">
                 <li>
-                    <a href="./dashboard-personal-profile.html">
+                    <a href="./gallery-dashboard.html" class="color-white">
+                        <i class="fa fa-id-card"></i>
+                        Dashboard
+                    </a>
+                </li>
+                <li>
+                    <a href="./dashboard-personal-profile.html" class="color-white">
                         <i class="fa fa-user"></i>
                         Personal Profile Page
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dashboard-edit-profile.html" class="color-white dashboard-menu-active">
                         <i class="fa fa-pencil-square-o"></i>
                         Edit Profile Page
                     </a>
                 </li>
                 <li>
-                    <a href="./gallery-dashboard.html">
+                    <a href="./dashboard-all-photo.html" class="color-white">
                         <i class="fa fa-picture-o"></i>
                         All Photos
                     </a>
                 </li>
                 <li>
-                    <a href="./gallery-dashboard.html">
+                    <a href="./dashboard-all-video.html" class="color-white">
                         <i class="fa fa-file-video-o"></i>
                         All Videos
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="color-white">
                         <i class="fa fa-key"></i>
                         Change Password
                     </a>
