--- a/gallery/video-page.html
+++ b/gallery/video-page.html
@@ -167,18 +167,17 @@
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane"
-                        type="button" role="tab" aria-controls="profile-tab-pane"
-                        aria-selected="false">Top Viewed</button>
+                        type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Top
+                        Viewed</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane"
-                        type="button" role="tab" aria-controls="contact-tab-pane"
+                    <button class="nav-link active" id="contact-tab" data-bs-toggle="tab"
+                        data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane"
                         aria-selected="false">See All</button>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
-                    tabindex="0">
+                <div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
                     <div class="see-all-video-slider-content py-5 custom-border-bottom">
                         <div class="video-gallery-cards trending-video-slider">
                             <div class="">
@@ -194,7 +193,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -218,7 +218,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Top 10 Tank Champions From League of Legends
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -242,7 +243,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 League Of Legends Ekko Seconds Game Tips Cheat Codes
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -266,7 +268,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -290,7 +293,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -314,7 +318,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -345,7 +350,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -369,7 +375,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Top 10 Tank Champions From League of Legends
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -393,7 +400,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 League Of Legends Ekko Seconds Game Tips Cheat Codes
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -417,7 +425,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -441,7 +450,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -465,7 +475,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -479,8 +490,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade show active" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab"
-                    tabindex="0">
+                <div class="tab-pane fade show active" id="contact-tab-pane" role="tabpanel"
+                    aria-labelledby="contact-tab" tabindex="0">
                     <div class="see-all-video-slider-content py-5 custom-border-bottom">
                         <div class="video-gallery-cards trending-video-slider">
                             <div class="">
@@ -496,7 +507,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -520,7 +532,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Top 10 Tank Champions From League of Legends
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -544,7 +557,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 League Of Legends Ekko Seconds Game Tips Cheat Codes
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -568,7 +582,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -592,7 +607,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -616,7 +632,8 @@
                                             <h6 class="video-gallery-card-title">
                                                 Sequel to the Game Where You Draw
                                             </h6>
-                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                                            <p class="ptop-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Aliquid
                                                 nisi tenetur alias deserunt ipsam.</p>
                                             <p class="video-gallery-card-uploader">
                                                 <i class="fa fa-eye f-18 me-1"></i> 5.57K
@@ -1140,41 +1157,48 @@
             ]
         });
 
-        $('.trending-video-slider').slick({
-            slidesToShow: 4,
-            slidesToScroll: 1,
-            autoplay: false,
-            // autoplaySpeed: 1000,
-            arrows: true,
-            dots: false,
-            nextArrow: "<button class='slick-prev pull-right'><i class='fa fa-angle-right' aria-hidden='true'></i></button>",
-            prevArrow: "<button class='slick-prev pull-left'><i class='fa fa-angle-left' aria-hidden='true'></i></button>",
-            responsive: [
-                {
-                    breakpoint: 1024,
-                    settings: {
-                        slidesToShow: 3,
-                        slidesToScroll: 1,
-                        infinite: true,
-                        dots: false
+
+        $(document).ready(function () {
+            $('.trending-video-slider').slick({
+                slidesToShow: 4,
+                slidesToScroll: 1,
+                autoplay: false,
+                // autoplaySpeed: 1000,
+                arrows: true,
+                dots: false,
+                nextArrow: "<button class='slick-prev pull-right'><i class='fa fa-angle-right' aria-hidden='true'></i></button>",
+                prevArrow: "<button class='slick-prev pull-left'><i class='fa fa-angle-left' aria-hidden='true'></i></button>",
+                responsive: [
+                    {
+                        breakpoint: 1024,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 1,
+                            infinite: true,
+                            dots: false
+                        }
+                    },
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1
+                        }
+                    },
+                    {
+                        breakpoint: 576,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
                     }
-                },
-                {
-                    breakpoint: 768,
-                    settings: {
-                        slidesToShow: 2,
-                        slidesToScroll: 1
-                    }
-                },
-                {
-                    breakpoint: 576,
-                    settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1
-                    }
-                }
-            ]
+                ]
+            });
         });
+
+        $('button[data-bs-toggle="tab"]').on('shown.bs.tab', function (e) {
+            $('.trending-video-slider').slick('setPosition');
+        })
 
     </script>
 </body>
