slider problem solve and video page

--- a/community/community_index.html
+++ b/community/community_index.html
@@ -437,11 +437,11 @@
                                                         <p class="small-text">or drag and drop</p>
                                                     </div>
                                                     <div class="preview-file">
-                                                        <img id="previewImg" src="#" alt="">
-                                                        <button type="button" id="imgClose"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                                        <img class="previewImg" src="#" alt="">
+                                                        <button type="button" class="imgClose"><i class="fa fa-times" aria-hidden="true"></i></button>
                                                     </div>
                                                     <div class="media-input">
-                                                        <input accept="image/*" type='file' id="imgInp" />
+                                                        <input accept="image/*" type='file' class="imgInp" />
                                                     </div>
                                                 </div>
                                             </div>
