--- a/community/login.html
+++ b/community/login.html
@@ -24,7 +24,7 @@
         <a href="community_index.html" class="home-icon"><i class="fa fa-home" aria-hidden="true"></i></a>
         <div class="community-login">
             <div class="login-logo">
-                <a href="community_index.html"><img src="/assets/images/logo.png" alt="Logo"></a>
+                <a href="community_index.html"><img src="../assets/images/logo.png" alt="Logo"></a>
             </div>
             <form action="#" class="community-loginForm">
                 <h5 class="login-title">Login</h5>
@@ -33,7 +33,7 @@
                     <label>Username or email</label>
                 </div>
                 <div class="login-box">
-                    <input type="password">
+                    <input type="password" class="loginPassword">
                     <label>Password</label>
                 </div>
                 <div class="remember-box">
