--- a/community/registration.html
+++ b/community/registration.html
@@ -24,7 +24,7 @@
         <a href="community_index.html" class="home-icon"><i class="fa fa-home" aria-hidden="true"></i></a>
         <div class="community-login">
             <div class="login-logo">
-                <a href="community_index.html"><img src="/assets/images/logo.png" alt="Logo"></a>
+                <a href="community_index.html"><img src="../assets/images/logo.png" alt="Logo"></a>
             </div>
             <form action="#" class="community-loginForm">
                 <h5 class="login-title">Register</h5>
