--- a/community/setting.html
+++ b/community/setting.html
@@ -382,8 +382,8 @@
                                         </select>
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="relation">Relation Status</label>
-                                        <select name="" id="relation">
+                                        <label for="relation1">Relation Status</label>
+                                        <select name="" id="relation1">
                                             <option selected>Relation Stauts</option>
                                             <option >Marreid</option>
                                             <option >Unmarreid</option>
@@ -442,8 +442,8 @@
                                         </select>
                                     </div> 
                                     <div class="col-lg-6">
-                                        <label for="country">Country</label>
-                                        <select name="" id="country">
+                                        <label for="country1">Country</label>
+                                        <select name="" id="country1">
                                             <option selected>Country</option>
                                             <option>Bangladesh</option>
                                             <option>Canada</option>
@@ -462,24 +462,24 @@
                                 <h5 class="setting-title">Account Information</h5>
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <label for="firstName">Full Name</label>
-                                        <input type="text" id="firstName" name="fname" placeholder="Full Name">
+                                        <label for="firstName1">Full Name</label>
+                                        <input type="text" id="firstName1" name="fname" placeholder="Full Name">
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="lastName">User Name</label>
-                                        <input type="text" id="lastName" name="fname" placeholder="User Name">
+                                        <label for="lastName1">User Name</label>
+                                        <input type="text" id="lastName1" name="fname" placeholder="User Name">
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="forMail">Account Email</label>
-                                        <input type="email" id="forMail" name="fname" placeholder="Account email">
+                                        <label for="forMail1">Account Email</label>
+                                        <input type="email" id="forMail1" name="fname" placeholder="Account email">
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="poneNumber">Phone Number</label>
-                                        <input type="number" id="poneNumber" name="fname" placeholder="Phone Number">
+                                        <label for="poneNumber1">Phone Number</label>
+                                        <input type="number" id="poneNumber1" name="fname" placeholder="Phone Number">
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="country">Country</label>
-                                        <select name="" id="country">
+                                        <label for="country2">Country</label>
+                                        <select name="" id="country2">
                                             <option selected>Country</option>
                                             <option>Bangladesh</option>
                                             <option>Canada</option>
