--- a/community/live-chat.html
+++ b/community/live-chat.html
@@ -319,6 +319,24 @@
                         <span class="sms-time">12:00 AM</span>
                     </div>
                 </li>
+                <li class="chat-list friend-chat">
+                    <div class="chat-figure">
+                        <img src="../assets/images/community/home/news-post/comment01.jpg" alt="image">
+                    </div>
+                    <div class="chat-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, suscipit.</p>
+                        <span class="sms-time">12:00 AM</span>
+                    </div>
+                </li>
+                <li class="chat-list my-chat">
+                    <div class="chat-figure my-figure">
+                        <img src="../assets/images/community/home/news-post/coment02.jpg" alt="image">
+                    </div>
+                    <div class="chat-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, suscipit.</p>
+                        <span class="sms-time">12:00 AM</span>
+                    </div>
+                </li>
                 <li class="chat-list my-chat">
                     <div class="chat-figure my-figure">
                         <img src="../assets/images/community/home/news-post/coment02.jpg" alt="image">
