love react active

--- a/community/live-chat.html
+++ b/community/live-chat.html
@@ -287,7 +287,104 @@
     <!-- community main content area start  -->
     <section class="all-content">
         <div class="chat-online">
-            
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/user-0.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Debra</a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/comment04.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/post-5.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/post-3.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/post-02.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
+            <div class="single-online-person">
+                <a href="#" class="online-person-img">
+                    <img src="../assets/images/community/home/news-post/authore03.jpg" alt="img">
+                    <span class="online-status"></span>
+                </a>
+                <h6 class="online-person-name"><a href="#">Reggie  </a></h6>
+            </div>
         </div>
         <!-- all notification area start  -->
         <div class="privacy-page-wrap common-box">
