--- a/community/marketplace.html
+++ b/community/marketplace.html
@@ -286,7 +286,7 @@
     <!-- community header area end  -->
     <!-- community main content area start  -->
     <section class="all-content">
-        <!-- favorite hero start -->
+        <!-- my profile start -->
         <div class="main-profile">
             <div class="row">
                 <div class="col-lg-12">
@@ -294,123 +294,149 @@
                         <div class="full-profile-cover">
                             <img src="../assets/images/community/myProfile/my-profile-cover.jpg" alt="cover">
                             <div class="page-name">
-                                Help & Support
+                                Marketplace
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- favorite hero end -->
+        <!-- my profile end -->
+        <!-- news feed content start  -->
         <div class="news-feed-content">
-            <!-- favorite page wrapper start -->
-            <div class="help-issu-box favorie-page-title">
-                <p>Forums</p>
-                <form class="search_box">
-                    <input type="text" id="inputSearch" placeholder="Search any one..">
-                    <button type="submit" id="inputSearchBtn"><i class="fa fa-search" aria-hidden="true"></i></button>
-                </form>
-            </div>
-            <div class="favorite-content">
+            <div class="setting-page-wrap">
+                <!-- marketplace page start  -->
                 <div class="row">
-                    <div class="col-lg-3 col-md-12">
-                        <div class="favorite-info-box">
-                            <div class="single-profile-list">
-                                <div class="view-profile left-widget">
-                                    <div class="profile-cover">
-                                        <a href="#"><img src="../assets/images/community/home/smallCover.jpg" alt="cover"></a>
-                                        
-                                    </div>
-                                    <div class="profile-title d-flex align-items-center">
-                                        <a href="#"><img src="../assets/images/community/home/user-0.jpg" alt=""></a>
-                                        <div class="profile-name">
-                                            <h6><a href="#">Matthew Turner</a></h6>
-                                        </div>
-                                    </div>
+                    <div class="col-lg-12">
+                        <div class="friends-tab-wrap">
+                            <div class="friends-title marketplace-page-title">
+                                <h6 class="our-product">Our Products</h6>
+                                <form class="search_box">
+                                    <input type="text" id="inputSearch" placeholder="Search...">
+                                    <button type="submit" id="inputSearchBtn"><i class="fa fa-search" aria-hidden="true"></i></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- news feeds content start  -->
+        <div class="news-feed-content">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-market-product">
+                        <div class="product-img">
+                            <img src="../assets/images/community/market/marketplace-1.jpg" alt="img">
+                            <div class="product-price">
+                                $ 55.00
+                            </div>                            
+                        </div>
+                        <div class="market-product-info">
+                            <h6 class="market-product-name"><a href="#">High Quality Watch</a></h6>
+                            <p class="product-address"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>683 Warner Street Casper, WY</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-market-product">
+                        <div class="product-img">
+                            <img src="../assets/images/community/market/marketplace-2.jpg" alt="img">
+                            <div class="product-price">
+                                $ 55.00
+                            </div>                            
+                        </div>
+                        <div class="market-product-info">
+                            <h6 class="market-product-name"><a href="#">Digital Camera</a></h6>
+                            <p class="product-address"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>683 Warner Street Casper, WY</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-market-product">
+                        <div class="product-img">
+                            <img src="../assets/images/community/market/marketplace-1.jpg" alt="img">
+                            <div class="product-price">
+                                $ 55.00
+                            </div>                            
+                        </div>
+                        <div class="market-product-info">
+                            <h6 class="market-product-name"><a href="#">High Quality Watch</a></h6>
+                            <p class="product-address"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>683 Warner Street Casper, WY</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-market-product">
+                        <div class="product-img">
+                            <img src="../assets/images/community/market/marketplace-2.jpg" alt="img">
+                            <div class="product-price">
+                                $ 55.00
+                            </div>                            
+                        </div>
+                        <div class="market-product-info">
+                            <h6 class="market-product-name"><a href="#">Digital Camera</a></h6>
+                            <p class="product-address"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>683 Warner Street Casper, WY</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="load-more mb-30">
+                    <a href="#">
+                        <span class="loading-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M22 11a1 1 0 0 0-1 1 9 9 0 1 1-9-9 8.9 8.9 0 0 1 4.42 1.166l-1.127 1.127A1 1 0 0 0 16 7h4a1 1 0 0 0 1-1V2a1 1 0 0 0-1.707-.707L17.882 2.7A10.9 10.9 0 0 0 12 1a11 11 0 1 0 11 11 1 1 0 0 0-1-1z" fill="#000000" data-original="#000000" class=""></path></g></svg>
+                        </span>
+                        Load more Posts
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="market-product-details-title">
+                        Products Details
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="market-product-details-img">
+                        <!-- <img src="../assets/images/community/market/marketplace-1.jpg" alt="image"> -->
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="market-product-details">
+                        <h6>High Quality Watch</h6>
+                        <p class="product-address"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>683 Warner Street Casper, WY</p>                    
+                        <div class="product-price"><span>$</span> 55.00</div>
+                        <ul class="product-condition">
+                            <li><span class="condition-title">Condition:</span>New</li>
+                            <li><span class="condition-title">Brand:</span>Digital Watch</li>
+                        </ul>
+                        <div class="market-product-description">
+                            <h5>Details:</h5>
+                            <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem vivamus magna justo lacinia eget consectetur sed convallis at tellus.</p>
+                            <p>Proin eget tortor risus donec rutrum congue leo eget malesuada mauris blandit aliquet elit eget tincidunt nibh pulvinar curabitur arcu erat accumsan id imperdiet et porttitor at sem.</p>
+                        </div>
+                        <div class="product-seller-information single-upload-video">
+                            <h4>Seller Information</h4>
+                            <div class="notification-author">
+                                <div class="figure">
+                                    <img src="../assets/images/community/header/user-1.jpg" alt="image" class="rounded-circle">
+                                </div>
+                                <div class="text">
+                                    <h6 class="seller-name">James Vanwin</h6>
+                                    <p class="time-count">803-223-0510</p>
+                                    <p class="time-count">3742 Snider Street Denver, CO</p>
                                 </div>
                             </div>
-                            <ul class="favorite-info">
-                                <li>
-                                    <h6 class="info-title">Page Info</h6>
-                                    <p>
-                                        Created On 07 May 2021
-                                    </p>
-                                </li>
-                                <li>
-                                    <h6 class="info-title">About</h6>
-                                    <p>
-                                        Pellentesque in ipsum id orci porta dapibus vivamus suscipit tortor eget felis porttitor volutpat cras ultricies ligula sed magna dictum porta lorem ipsum dolor sit amet consectetur dipiscing elit.
-                                    </p>
-                                </li>
-                            </ul>
-                            <ul class="like-this">
-                                <li><span>People like this</span> 1649234</li>
-                                <li><span>People follow this</span> 1649234</li>
-                                <li><a href="#">www.cutepie.com</a></li>
-                            </ul>
-                        </div>                        
-                    </div>
-                    <div class="col-lg-9 col-md-12">
-                        <div class="favorite-table table-responsive">
-                            <table class="table-content">
-                                <thead>
-                                    <tr>
-                                        <th>Topic</th>
-                                        <th>Voices</th>
-                                        <th>Posts</th>
-                                        <th>Recent Topices</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <h6>Graphic Design</h6>
-                                            <p>Proin eget tortor risus vivamus magna</p>
-                                            <p>justo lacinia eget consectetu</p>
-                                        </td>
-                                        <td>65</td>
-                                        <td>12</td>
-                                        <td class="table-profiel">
-                                            <div class="notification-author">
-                                                <div class="figure">
-                                                    <a href="#"><img src="../assets/images/community/header/user-1.jpg" alt=""></a>
-                                                </div>
-                                                <div class="text">
-                                                    <h6><a href="#">James Vanwin</a></h6>
-                                                    <p class="time-count">1 Days Ago</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <h6>Graphic Design</h6>
-                                            <p>Proin eget tortor risus vivamus magna</p>
-                                            <p>justo lacinia eget consectetu</p>
-                                        </td>
-                                        <td>65</td>
-                                        <td>12</td>
-                                        <td class="table-profiel">
-                                            <div class="notification-author">
-                                                <div class="figure">
-                                                    <a href="#"><img src="../assets/images/community/header/user-1.jpg" alt=""></a>
-                                                </div>
-                                                <div class="text">
-                                                    <h6><a href="#">James Vanwin</a></h6>
-                                                    <p class="time-count">1 Days Ago</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <h6 class="seller-msg-title">Send Seller Message</h6>
+                            <form action="#" class="vido-coment product-seller-msg">
+                                <input type="text" placeholder="Write Comment">
+                                <button type="submit" class="vido-coment-send"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!-- favorite page wrapper end -->
         </div>
+        <!-- news feeds content end  -->
         <!-- live chat and contact area start  -->
         <div class="contact-wrap">
             <div class="chat-wrapper">
