--- a/community/weather.html
+++ b/community/weather.html
@@ -294,7 +294,7 @@
                         <div class="full-profile-cover">
                             <img src="../assets/images/community/myProfile/my-profile-cover.jpg" alt="cover">
                             <div class="page-name">
-                                Help & Support
+                                Weather
                             </div>
                         </div>
                     </div>
@@ -302,115 +302,37 @@
             </div>
         </div>
         <!-- favorite hero end -->
-        <div class="news-feed-content">
-            <!-- favorite page wrapper start -->
-            <div class="help-issu-box favorie-page-title">
-                <p>Forums</p>
-                <form class="search_box">
-                    <input type="text" id="inputSearch" placeholder="Search any one..">
-                    <button type="submit" id="inputSearchBtn"><i class="fa fa-search" aria-hidden="true"></i></button>
-                </form>
+
+        <!-- weather area start  -->
+        <div class="privacy-page-wrap common-box">
+            <div class="weather-img2">
+                <a href="#"><img src="../assets/images/community/weather-2.png" alt="img"></a>
             </div>
-            <div class="favorite-content">
+            <form class="setting-form-wrapper weather-input-form">
+                <h5 class="setting-title">Search Location</h5>
                 <div class="row">
-                    <div class="col-lg-3 col-md-12">
-                        <div class="favorite-info-box">
-                            <div class="single-profile-list">
-                                <div class="view-profile left-widget">
-                                    <div class="profile-cover">
-                                        <a href="#"><img src="../assets/images/community/home/smallCover.jpg" alt="cover"></a>
-                                        
-                                    </div>
-                                    <div class="profile-title d-flex align-items-center">
-                                        <a href="#"><img src="../assets/images/community/home/user-0.jpg" alt=""></a>
-                                        <div class="profile-name">
-                                            <h6><a href="#">Matthew Turner</a></h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <ul class="favorite-info">
-                                <li>
-                                    <h6 class="info-title">Page Info</h6>
-                                    <p>
-                                        Created On 07 May 2021
-                                    </p>
-                                </li>
-                                <li>
-                                    <h6 class="info-title">About</h6>
-                                    <p>
-                                        Pellentesque in ipsum id orci porta dapibus vivamus suscipit tortor eget felis porttitor volutpat cras ultricies ligula sed magna dictum porta lorem ipsum dolor sit amet consectetur dipiscing elit.
-                                    </p>
-                                </li>
-                            </ul>
-                            <ul class="like-this">
-                                <li><span>People like this</span> 1649234</li>
-                                <li><span>People follow this</span> 1649234</li>
-                                <li><a href="#">www.cutepie.com</a></li>
-                            </ul>
-                        </div>                        
+                    <div class="col-lg-6">
+                        <label for="countrytime">Country and Timezone</label>
+                        <input type="text" id="countrytime" name="countrytime">
                     </div>
-                    <div class="col-lg-9 col-md-12">
-                        <div class="favorite-table table-responsive">
-                            <table class="table-content">
-                                <thead>
-                                    <tr>
-                                        <th>Topic</th>
-                                        <th>Voices</th>
-                                        <th>Posts</th>
-                                        <th>Recent Topices</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <h6>Graphic Design</h6>
-                                            <p>Proin eget tortor risus vivamus magna</p>
-                                            <p>justo lacinia eget consectetu</p>
-                                        </td>
-                                        <td>65</td>
-                                        <td>12</td>
-                                        <td class="table-profiel">
-                                            <div class="notification-author">
-                                                <div class="figure">
-                                                    <a href="#"><img src="../assets/images/community/header/user-1.jpg" alt=""></a>
-                                                </div>
-                                                <div class="text">
-                                                    <h6><a href="#">James Vanwin</a></h6>
-                                                    <p class="time-count">1 Days Ago</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <h6>Graphic Design</h6>
-                                            <p>Proin eget tortor risus vivamus magna</p>
-                                            <p>justo lacinia eget consectetu</p>
-                                        </td>
-                                        <td>65</td>
-                                        <td>12</td>
-                                        <td class="table-profiel">
-                                            <div class="notification-author">
-                                                <div class="figure">
-                                                    <a href="#"><img src="../assets/images/community/header/user-1.jpg" alt=""></a>
-                                                </div>
-                                                <div class="text">
-                                                    <h6><a href="#">James Vanwin</a></h6>
-                                                    <p class="time-count">1 Days Ago</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="col-lg-6">
+                        <label for="forecastdays">Forecast Days</label>
+                        <input type="text" id="forecastdays" name="fname">
+                    </div>
+                    <div class="col-lg-6">
+                        <label for="temperatureunit">Temperature Unit</label>
+                        <input type="text" id="temperatureunit" name="fname">
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="social-theme-btn save-btn">Check Weather</button>
                     </div>
                 </div>
-            </div>
-
-            <!-- favorite page wrapper end -->
+            </form>
         </div>
+        <!-- weather area end  -->
+        
+
+
         <!-- live chat and contact area start  -->
         <div class="contact-wrap">
             <div class="chat-wrapper">
