resolve same class

--- a/gallery/dashboard-personal-profile.html
+++ b/gallery/dashboard-personal-profile.html
@@ -140,7 +140,7 @@
             <div class="profile-hero mt-0">
                 <div class="container">
                     <div class="profile-hero-content">
-                        <img class="profile-cover" src="../assets/images/gallery/profile/profile-cover-1.jpg
+                        <img class="gallery-profile-cover" src="../assets/images/gallery/profile/profile-cover-1.jpg
             " alt="profile cover">
                         <div class="profile-hero-info">
                             <div class="profile-img-part">
