--- a/gallery/profile.html
+++ b/gallery/profile.html
@@ -38,7 +38,7 @@
     <div class="profile-hero">
         <div class="container">
             <div class="profile-hero-content">
-                <img class="profile-cover" src="../assets/images/gallery/profile/profile-cover-1.jpg
+                <img class="gallery-profile-cover" src="../assets/images/gallery/profile/profile-cover-1.jpg
                 " alt="profile cover">
                 <div class="profile-hero-info">
                     <div class="profile-img-part">
