--- a/services/provider-profile.html
+++ b/services/provider-profile.html
@@ -101,7 +101,7 @@
         <div class="provider-service-content">
             <div class="container">
                 <div class="tab-content">
-                    <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="tab-pane " id="home" role="tabpanel" aria-labelledby="home-tab">
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="content-wrap">
@@ -439,40 +439,40 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+                    <div class="tab-pane active" id="messages" role="tabpanel" aria-labelledby="messages-tab">
                         <h5 class="content-title">Videos</h5>
                         <div class="content-wrap">
                             <div class="video-active">
                                 <div class="single-video">
-                                    <div class="video-tumbnil">                                                
-                                        <img src="../assets/images/services/video/hqdefault.jpg" alt="image">
-                                        <a href="#" class="play-icon" data-video-id="4qxdkXG_tec">
+                                    <div class="video-tumbnil" data-bs-toggle="modal" data-bs-target="#serviceVideoModal">                                        
+                                        <img src="../assets/images/services/video/hqdefault.jpg" alt="image">                                        
+                                        <div  class="play-icon" >
                                             <i class="fa fa-play" aria-hidden="true"></i>
-                                        </a>
+                                        </div>                                      
                                     </div>
                                 </div>
                                 <div class="single-video">
-                                    <div class="video-tumbnil">                                                
-                                        <img src="../assets/images/services/video/hqdefault2.jpg" alt="image">
-                                        <a href="#" class="play-icon" data-video-id="8qU2xhZlsJE">
+                                    <div class="video-tumbnil" data-bs-toggle="modal" data-bs-target="#serviceVideoModal">                                        
+                                        <img src="../assets/images/services/video/hqdefault.jpg" alt="image">                                        
+                                        <div  class="play-icon" >
                                             <i class="fa fa-play" aria-hidden="true"></i>
-                                        </a>
+                                        </div>                                      
                                     </div>
                                 </div>
                                 <div class="single-video">
-                                    <div class="video-tumbnil">                                                
-                                        <img src="../assets/images/services/video/hqdefault3.jpg" alt="image">
-                                        <a href="#" class="play-icon" data-video-id="mxD7QEt85ms">
+                                    <div class="video-tumbnil" data-bs-toggle="modal" data-bs-target="#serviceVideoModal">                                        
+                                        <img src="../assets/images/services/video/hqdefault.jpg" alt="image">                                        
+                                        <div  class="play-icon" >
                                             <i class="fa fa-play" aria-hidden="true"></i>
-                                        </a>
+                                        </div>                                      
                                     </div>
                                 </div>
                                 <div class="single-video">
-                                    <div class="video-tumbnil">                                                
-                                        <img src="../assets/images/services/video/hqdefault3.jpg" alt="image">
-                                        <a href="#" class="play-icon" data-video-id="mxD7QEt85ms">
+                                    <div class="video-tumbnil" data-bs-toggle="modal" data-bs-target="#serviceVideoModal">                                        
+                                        <img src="../assets/images/services/video/hqdefault.jpg" alt="image">                                        
+                                        <div  class="play-icon" >
                                             <i class="fa fa-play" aria-hidden="true"></i>
-                                        </a>
+                                        </div>                                      
                                     </div>
                                 </div>
                             </div>                                    
@@ -692,15 +692,49 @@
         </div>
     </section>
 
+    
     <!-- service provider tabs end  -->
     
+
+    <!-- video show modal start -->
+    <div class="modal fade" id="serviceVideoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content service-video-modal">
+                <button type="button" class="service-video-modal-close" data-bs-dismiss="modal" aria-label="Close" onclick="document.getElementById('videPlaying').pause();" > <i class="fa fa-times"></i></button>                
+                <div class="modal-body">
+                      <vm-player playsinline class="service-playing-video" id="videPlaying">
+                        <vm-video
+                          cross-origin="true"                          
+                          poster="../assets/images/services/video/hqdefault.jpg"
+                        >
+                          <source
+                            data-src="../assets/images/community/movie.mp4"
+                            type="video/mp4"
+                          />
+                        </vm-video>                
+                        <vm-default-ui></vm-default-ui>
+                      </vm-player>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- video show modal end -->
+
+
+
+
+
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/odometer.js"></script>
     <script src="../assets/js/slick-slider.js"></script>
-    <script src="../assets/js/services/jquery-modal-video.min.js"></script>
+    <script
+  type="module"
+  src="https://cdn.jsdelivr.net/npm/@vime/core@^5/dist/vime/vime.esm.js"
+></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script> <!--this api just For Development Purpose Only-->
     <script src="../assets/js/services/script.js"></script>
+
 </body>
 
 </html>
