--- a/services/provider-profile.html
+++ b/services/provider-profile.html
@@ -101,7 +101,7 @@
         <div class="provider-service-content">
             <div class="container">
                 <div class="tab-content">
-                    <div class="tab-pane " id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="content-wrap">
@@ -439,7 +439,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane active" id="messages" role="tabpanel" aria-labelledby="messages-tab">
+                    <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab">
                         <h5 class="content-title">Videos</h5>
                         <div class="content-wrap">
                             <div class="video-active">
@@ -690,9 +690,7 @@
                   </div>
             </div>
         </div>
-    </section>
-
-    
+    </section>    
     <!-- service provider tabs end  -->
     
 
